fix - Sole responsibility for routes
